[STYLE] fixed body overflow

--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow: auto !important;
+}
+
 a {
     text-decoration: none;
 }
